# osdev-labs

./: Cargo.toml  LICENSE  README.md
binaries/aarch64-qemu/: aarch64-qemu.json  aarch64-qemu.ld
binaries/aarch64-qemu/src/: entry_stage0.S  main.rs
binaries/riscv64-qemu/: riscv64-qemu.json  riscv64-qemu.ld
binaries/riscv64-qemu/src/: crt0.S  main.rs
bootloaders/aarch64-qemu/: Cargo.toml  aarch64-qemu.json  aarch64-qemu.ld
bootloaders/aarch64-qemu/src/: main.rs
bootloaders/riscv64-qemu/: Cargo.toml  riscv64-qemu.json
bootloaders/x86_64-uefi/: Cargo.toml
bootloaders/x86_64-uefi/src/: main.rs
docs/roadmaps/: 000-Dev_Environment.md  001-Bootloader.md
libraries/developing-modules/: Cargo.toml
libraries/developing-modules/src/: lib.rs  serial.rs
libraries/developing-modules/src/aarch64/: mod.rs  pl011_uart.rs
libraries/developing-modules/src/firmware/: mod.rs
libraries/developing-modules/src/firmware/uefi/: memory_map.rs
libraries/developing-modules/src/x86_64/: gdt.rs  mod.rs  port_io.rs  uart.rs
xtask/: Cargo.toml
xtask/src/: main.rs
